GNOME Bugzilla – Bug 721158
Missing ICU string when doing --version on xmllint
Last modified: 2016-04-29 18:03:00 UTC
hi. on line 2964 of xmllint.c there shoud be something like this: if (xmlHasFeature(XML_WITH_ZLIB)) fprintf(stderr, "Zlib "); + if (xmlHasFeature(XML_WITH_ICU)) fprintf(stderr, "ICU "); if (xmlHasFeature(XML_WITH_LZMA)) fprintf(stderr, "Lzma "); so: if icu is enabled it is shown as a feature in --version command
Created attachment 322919 [details] [review] Proposed Patch v1
(In reply to David Kilzer from comment #1) > Created attachment 322919 [details] [review] [review] > Proposed Patch v1 Since Iconv and ICU are mutually exclusive, I placed the XML_WITH_ICU check just below the XML_WIT_ICONV check.
This was fixed in 783931fc5928cfcfaeb2e3199203e3c3fe7d75ec. <https://git.gnome.org/browse/libxml2/commit/?id=783931fc5928cfcfaeb2e3199203e3c3fe7d75ec> I can't move it to RESOLVED/FIXED because I don't have editbugs permission for GNOME Bugzilla.